@@ -33,7 +33,7 @@ overload     = 0
 parent       = 0
 
 [Prereqs / RuntimeSuggests]
-Trace::Mask = 0.000006
+Trace::Mask = 0.000007
 Sub::Name   = 0.11
 Sub::Util   = 1.40
 
