@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Prep for a new Trace::Mask version
+
 0.000005  2016-02-05 11:56:11-08:00 America/Los_Angeles
 
     - Bump minimum Test2::Suite version (fixes issue found in windows tests)
